--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "fp-ts": "^2.12.0",
+    "uuid": "^8.3.2",
     "xite-reporting-sdk": "XiteTV/xite-reporting-sdk#7.0.1"
   }
 }
