--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,9 @@ jobs:
             mkdir -p results
             k6 run --out json=results/out.json --summary-export=results/summary.json --out csv=results/out.csv --out statsd ./dist/test-suite.js
       - store_artifacts:
-          path: /root/workspace/results
+          path: results
 
-  push-sky-staging-v6-2-gcr:
+  push-xite-perfomance-test-gcr:
       docker:
         - image: eu.gcr.io/xite-cms/xite-gcloud:latest
           auth:
@@ -59,6 +59,7 @@ jobs:
               DOCKERFILE_PATH: "Dockerfile"
             command: |
               echo $GITHUB_PRIVATE_KEY_ENCODED | base64 -d >> github-key
+              chmod 0400 github-key
               cp -r /tmp/xite-sdk/* .
               ./docker-build-and-gcr-push.sh
               ./push-git-tag.sh
@@ -69,7 +70,7 @@ workflows:
     jobs:
       - loadimpact:
           context: PERFORMANCE_TEST
-      - push-sky-staging-v6-2-gcr:
+      - push-xite-perfomance-test-gcr:
           context: GCloud
           requires:
             - loadimpact
